--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Pabitra Chowdhury
+description: Email: [chowdhury.pa@northeastern.edu](chowdhury.pa@northeastern.edu)
 show_downloads : false
 logo : /assets/my_pic.jpg
 theme : jekyll-theme-minimal
