--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pabitra Chowdhury
-description: Email: [chowdhury.pa@northeastern.edu](chowdhury.pa@northeastern.edu)
+description: PhD Student, Northeastern University
 show_downloads : false
 logo : /assets/my_pic.jpg
 theme : jekyll-theme-minimal
