--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Pabitra Chowdhury
 show_downloads : false
 logo : /assets/my_pic.jpg
+footer_text: "This site is maintained by Pabitra Chowdhury"
 theme : jekyll-theme-minimal
