--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ logo : /assets/my_pic.jpg
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pabitraeco.github.io" # the base hostname & protocol for your site 
 theme : jekyll-theme-minimal
+color-scheme : "dark"
