--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Pabitra Chowdhury
 show_downloads : false
-logo : /assets/my_pic2.jpg
+logo : /assets/my_pic.jpg
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pabitraeco.github.io" # the base hostname & protocol for your site 
 theme : jekyll-theme-minimal
